<resources>
    <string name="app_name">Hoop !!</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="calls">Calls</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myStatus">My Status</string>
    <string name="myStatusDescription">Tap to add status update</string>
    <string name="recentUpdates">" "Recent Updates</string>
    <string name="viewedUpdates">" "Viewed Updates</string>
    <string name="mutedUpdates">" "Muted Updates</string>

</resources>
